about stats corrected to align

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -108,7 +108,7 @@ body {
 }
 
 .about .container {
-    padding: 25px 25px;
+    padding: 10px 4px;
 }
 
 /* Make text more readable on background */
